crates/rolldown/tests/rolldown/errors/invalid_options/output_format/main.js
import('./lib').then(x => {
  console.log(x.a)
})
